--- a/src/App.css
+++ b/src/App.css
@@ -37,5 +37,17 @@
   }
 }
 .ant-picker-calendar-date-content{
-  height: 30px !important;
+  height: 50px !important;
+}
+.events {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.events .ant-badge-status {
+  width: 100%;
+  overflow: hidden;
+  font-size: 12px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
