--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -5,3 +5,9 @@
   left: 0px;
   padding: 10px
 }
+.grid-container{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-auto-rows: 125px;
+  grid-gap: 20px;
+}
