--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,10 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+.dot{
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 15px;
+}
