--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -8,10 +8,32 @@
 .grid-container{
   display: grid;
   grid-template-columns: repeat(4,1fr);
-  grid-auto-rows: 125px;
+  grid-auto-rows: 200px;
   grid-gap: 20px;
 }
 
 .title{
   color:white
+}
+
+.item-appointment{
+  background-color: #f2f2f2;
+  box-shadow: 0 0 20px 8px #d0d0d0;
+  border-radius: 20px;
+}
+.layout-content{
+  margin: 24px 16px 0;
+  overflow: initial;
+}
+
+.btn{
+  border-radius: 8px !important;
+  background-color: red;
+}
+
+.appointment-hour{
+   background: antiquewhite;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    padding: 8px;
 }
